--- a/esphome-esp32emon/esp32emon.yaml
+++ b/esphome-esp32emon/esp32emon.yaml
@@ -8,7 +8,7 @@ esphome:
     - esp32emon.h
   project:
     name: danpeig.esp32emon
-    version: "1.0.0"
+    version: "1.1.0"
 
 # Board configuration
 esp32:
@@ -264,3 +264,26 @@ sensor:
     restore: false #If true, save the reading to the flash memory to prevent data loss in case of power loss
     filters:
       - multiply: 0.001
+
+  # Wifi signal sensors
+  - platform: wifi_signal # Reports the WiFi signal strength/RSSI in dB
+    name: "WiFi signal dB"
+    id: wifi_signal_db
+    update_interval: 60s
+    entity_category: "diagnostic"
+
+  - platform: copy # Reports the WiFi signal strength in %
+    source_id: wifi_signal_db
+    name: "WiFi signal percent"
+    filters:
+      - lambda: return min(max(2 * (x + 100.0), 0.0), 100.0);
+    unit_of_measurement: "%"
+    entity_category: "diagnostic"
+
+# Other information
+text_sensor:
+  - platform: wifi_info
+    ip_address:
+      name: ESP32 IP Address
+    ssid:
+      name: ESP32 SSID
