--- a/esphome-esp32emon/esp32emon.yaml
+++ b/esphome-esp32emon/esp32emon.yaml
@@ -8,7 +8,7 @@ esphome:
     - esp32emon.h
   project:
     name: danpeig.esp32emon
-    version: "1.3.0"
+    version: "1.4.0"
 
 # Board configuration
 esp32:
@@ -455,6 +455,7 @@ sensor:
 
   - platform: copy # Reports the WiFi signal strength in %
     source_id: wifi_signal_db
+    device_class: ""
     name: "WiFi signal"
     filters:
       - lambda: return min(max(2 * (x + 100.0), 0.0), 100.0);
